feat: implement get dataset dsp endpoint (#3243)
* feat: implement get dataset dsp endpoint

* PR remark